# cp-protocol

./: Cargo.toml  README.md  build.rs
proto/: auth.proto
src/: auth.rs  lib.rs  prover.rs  verifier.rs
tests/: lib_test.rs
